force-app/main/default/objects/custom_create123__c/custom_create123__c.object-meta.xml
<CustomObject>
    <label>Custom created object123</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects123</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>