force-app/main/default/objects/custom_create123__c/fields/custom_create_123field609__c.field-meta.xml
<CustomField>
    <fullName>custom_create_123field609__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 123field609</label>
    <type>Checkbox</type>
</CustomField>